[package]
name = "asciiart"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
structopt = "0.3"
anyhow = "1.0"
rusttype = "0.9"
ordered-float = "0.2"
